Munculkan section jobs available

--- a/career.html
+++ b/career.html
@@ -100,11 +100,6 @@
                   </div>
                 </div>
               </div> -->
-              <!-- <div class="career-box text-dark bg-light mb-3">
-                <h5>Accounting Officer - <span>R.E.D Consulting</span></h5>
-                <p>Lorem ipsum dolor sit amet consectetur. Pellentesque molestie quis amet a purus orci a. Id tempus et nisl sit. Volutpat auctor pellentesque nisi rhoncus. Tempus non libero pellentesque et ante nullam.</p>
-                <button class="career-box-btn">Start Yours</button>
-              </div>
               <div class="career-box text-dark bg-light mb-3">
                 <h5>Accounting Officer - <span>R.E.D Consulting</span></h5>
                 <p>Lorem ipsum dolor sit amet consectetur. Pellentesque molestie quis amet a purus orci a. Id tempus et nisl sit. Volutpat auctor pellentesque nisi rhoncus. Tempus non libero pellentesque et ante nullam.</p>
@@ -114,7 +109,12 @@
                 <h5>Accounting Officer - <span>R.E.D Consulting</span></h5>
                 <p>Lorem ipsum dolor sit amet consectetur. Pellentesque molestie quis amet a purus orci a. Id tempus et nisl sit. Volutpat auctor pellentesque nisi rhoncus. Tempus non libero pellentesque et ante nullam.</p>
                 <button class="career-box-btn">Start Yours</button>
-              </div> -->
+              </div>
+              <div class="career-box text-dark bg-light mb-3">
+                <h5>Accounting Officer - <span>R.E.D Consulting</span></h5>
+                <p>Lorem ipsum dolor sit amet consectetur. Pellentesque molestie quis amet a purus orci a. Id tempus et nisl sit. Volutpat auctor pellentesque nisi rhoncus. Tempus non libero pellentesque et ante nullam.</p>
+                <button class="career-box-btn">Start Yours</button>
+              </div>
             </div>
             <div class="col-lg-1"></div>
             <div class="col-lg-6 text-center">
