Update responsive views

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="position-fixed w-100">
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark px-4 py-1">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark px-lg-4 px-sm-2 py-1">
         <div class="container-fluid">
           <a href="index.html" class="navbar-brand">
             <img src="assets/images/home/main-logo.png" alt="redgroup-logo-main" class="main-logo" style="width: 100%;">
@@ -23,22 +23,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="index.html" class="nav-link text-white">Home</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="services.html" class="nav-link text-white">Services</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="teams.html" class="nav-link text-white">Our Teams</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="career.html" class="nav-link text-white">Career</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="gallery.html" class="nav-link text-white">Gallery</a>
               </li>
-               <li class="nav-item px-2">
+               <li class="nav-item px-lg-2 px-sm-1">
                 <a href="journey.html" class="nav-link text-white">Our Journey</a>
               </li>
             </ul>
@@ -69,8 +69,8 @@
     <main class="home-bg">
       <section class="home-hero text-center">
         <div class="container">
-          <h1>Provides a one-stop business <span>solutions for all business</span><span>needs.</span></h1>
-          <p>We offer a full range of market-entry and <span>corporate services for all kinds of</span><span>organisations across all industries and</span>geographies</p>
+          <h1>Provides a one-stop business <span> solutions for all business</span><span> needs.</span></h1>
+          <p>We offer a full range of market-entry and <span> corporate services for all kinds of</span><span> organisations across all industries and</span> geographies</p>
           <div class="hero-buttons">
             <button class="d-block mx-auto hero-button1 my-4">Start Yours</button>
             <button class="d-block mx-auto hero-button2">Explore Us</button>
@@ -149,7 +149,7 @@
               <p>Lorem ipsum dolor sit amet consectetur. Eleifend in malesuada gravida sodales. Commodo diam dui semper scelerisque diam fringilla eget scelerisque...</p>
             </div>
           </div>
-          <div class="text-end">
+          <div class="text-lg-end text-sm-center">
             <button class="services-button">All Services</button>
           </div>
         </div>
@@ -296,11 +296,11 @@
           <div class="cta-box">
             <h2>Subscribe to Our Newsletter</h2>
             <form action="" method="post">
-              <div class="row w-75 mx-auto">
-                <div class="col-5">
+              <div class="row w-cta mx-auto">
+                <div class="col-lg-5 col-sm-12">
                   <input type="text" name="full_name" id="" placeholder="Your Name" class="form-control" />
                 </div>
-                <div class="col-7">
+                <div class="col-lg-7 col-sm-12">
                   <input type="email" name="email" id="" placeholder="Your Email" class="form-control" />
                 </div>
               </div>
@@ -314,7 +314,7 @@
       </div>
       <footer class="container-fluid footer-section">
         <div class="row footer-upper">
-          <div class="col-lg-6 d-flex">
+          <div class="col-lg-6 d-flex justify-content-center align-items-center">
             <img src="assets/images/home/logo-redgroup.png" alt="logo-redgroup" class="logo-footer">
           </div>
           <div class="col-lg-3">
@@ -337,7 +337,7 @@
           </div>
         </div>
         <div class="row footer-lower py-2">
-          <div class="col-lg-4 text-start">
+          <div class="col-lg-4 orientation-text-left">
             <span>Copyright 2023 R.E.D Group</span>
           </div>
           <div class="col-lg-4 text-center">
@@ -347,16 +347,14 @@
             <i class="fab fa-facebook"></i>
             <i class="fab fa-twitter"></i>
           </div>
-          <div class="col-lg-4 text-end">
+          <div class="col-lg-4 orientation-text-right">
             <span>Privacy Policy</span>
           </div>
         </div>
       </footer>
 
     <script src="assets/js/jquery-360.min.js"></script>
-    <script src="assets/bootstrap-5/js/bootstrap.min.js"></script>
     <script src="assets/bootstrap-5/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/bootstrap-5/js/bootstrap.bundle.js"></script>
     <script src="assets/OwlCarousel2/dist/owl.carousel.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
