--- a/teams.html
+++ b/teams.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="position-fixed w-100">
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark px-4 py-1">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark px-lg-4 px-sm-2 py-1">
         <div class="container-fluid">
           <a href="index.html" class="navbar-brand">
             <img src="assets/images/home/main-logo.png" alt="redgroup-logo-main" class="main-logo" style="width: 100%" />
@@ -23,22 +23,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="index.html" class="nav-link text-white">Home</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="services.html" class="nav-link text-white">Services</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="teams.html" class="nav-link text-white">Our Teams</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="career.html" class="nav-link text-white">Career</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="gallery.html" class="nav-link text-white">Gallery</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="journey.html" class="nav-link text-white">Our Journey</a>
               </li>
             </ul>
@@ -74,7 +74,7 @@
         <div class="container">
           <h3><span>R.E.D</span> Top Leadership</h3>
           <div class="row my-5">
-            <div class="col-lg-5 mx-2">
+            <div class="col-lg-5">
               <div class="leader-wrapper">
                 <img src="assets/images/teams/leader.png" alt="leader-img" class="leader-img" />
               </div>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="row my-5">
-            <div class="col-lg-5 mx-2">
+            <div class="col-lg-5">
               <div class="leader-wrapper">
                 <img src="assets/images/teams/leader.png" alt="leader-img" class="leader-img" />
               </div>
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="row my-5">
-            <div class="col-lg-5 mx-2">
+            <div class="col-lg-5">
               <div class="leader-wrapper">
                 <img src="assets/images/teams/leader.png" alt="leader-img" class="leader-img" />
               </div>
@@ -283,7 +283,7 @@
     </main>
     <footer class="container-fluid footer-section">
       <div class="row footer-upper">
-        <div class="col-lg-6 d-flex">
+        <div class="col-lg-6 d-flex justify-content-center align-items-center">
           <img src="assets/images/home/logo-redgroup.png" alt="logo-redgroup" class="logo-footer" />
         </div>
         <div class="col-lg-3">
@@ -306,7 +306,7 @@
         </div>
       </div>
       <div class="row footer-lower py-2">
-        <div class="col-lg-4 text-start">
+        <div class="col-lg-4 orientation-text-left">
           <span>Copyright 2023 R.E.D Group</span>
         </div>
         <div class="col-lg-4 text-center">
@@ -316,15 +316,14 @@
           <i class="fab fa-facebook"></i>
           <i class="fab fa-twitter"></i>
         </div>
-        <div class="col-lg-4 text-end">
+        <div class="col-lg-4 orientation-text-right">
           <span>Privacy Policy</span>
         </div>
       </div>
     </footer>
+
     <script src="assets/js/jquery-360.min.js"></script>
-    <script src="assets/bootstrap-5/js/bootstrap.min.js"></script>
     <script src="assets/bootstrap-5/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/bootstrap-5/js/bootstrap.bundle.js"></script>
     <script src="assets/OwlCarousel2/dist/owl.carousel.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
