--- a/career.html
+++ b/career.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="position-fixed w-100">
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark px-4 py-1">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark px-lg-4 px-sm-2 py-1">
         <div class="container-fluid">
           <a href="index.html" class="navbar-brand">
             <img src="assets/images/home/main-logo.png" alt="redgroup-logo-main" class="main-logo" style="width: 100%" />
@@ -23,22 +23,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="index.html" class="nav-link text-white">Home</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="services.html" class="nav-link text-white">Services</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="teams.html" class="nav-link text-white">Our Teams</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="career.html" class="nav-link text-white">Career</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="gallery.html" class="nav-link text-white">Gallery</a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item px-lg-2 px-sm-1">
                 <a href="journey.html" class="nav-link text-white">Our Journey</a>
               </li>
             </ul>
@@ -122,10 +122,10 @@
               <p>Lorem ipsum dolor sit amet consectetur. Ac nec ullamcorper imperdiet</p>
               <div class="career-form-box">
                 <div class="row">
-                  <div class="col-6 py-3">
+                  <div class="col-lg-6 col-sm-12 py-3">
                     <input type="text" class="form-control" placeholder="Nama Depan" name="first_name" />
                   </div>
-                  <div class="col-6 py-3">
+                  <div class="col-lg-6 col-sm-12 py-3">
                     <input type="text" class="form-control" placeholder="Nama Belakang" name="last_name" />
                   </div>
                 </div>
@@ -138,11 +138,11 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-6 py-3 text-start">
+                  <div class="col-lg-6 col-sm-12 py-3 text-start">
                     <label for="formFile" class="form-label">Upload CV</label>
                     <input class="form-control" type="file" id="formFile" name="cv_file" />
                   </div>
-                  <div class="col-6 py-3 text-start">
+                  <div class="col-lg-6 col-sm-12 py-3 text-start">
                     <label for="formFile" class="form-label">Upload Motivasi</label>
                     <input class="form-control" type="file" id="formFile" name="motivation_file" />
                   </div>
@@ -167,7 +167,7 @@
         <img src="assets/images/career/career-banner.png" alt="career-banner" class="career-banner" />
         <div class="container">
           <div class="row career-cta-content">
-            <div class="col-lg-6 my-auto">
+            <div class="col-lg-6 my-auto career-orientation-text">
               <h4>Lorem ipsum dolor sit amet</h4>
               <p>Lorem ipsum dolor sit amet consectetur. Risus nulla leo imperdiet feugiat tortor. Ullamcorper egestas adipiscing quam massa lacus nunc. Venenatis.</p>
               <button class="career-cta-btn">Follow Now</button>
@@ -237,7 +237,7 @@
     </main>
     <footer class="container-fluid footer-section">
       <div class="row footer-upper">
-        <div class="col-lg-6 d-flex">
+        <div class="col-lg-6 d-flex justify-content-center align-items-center">
           <img src="assets/images/home/logo-redgroup.png" alt="logo-redgroup" class="logo-footer" />
         </div>
         <div class="col-lg-3">
@@ -260,7 +260,7 @@
         </div>
       </div>
       <div class="row footer-lower py-2">
-        <div class="col-lg-4 text-start">
+        <div class="col-lg-4 orientation-text-left">
           <span>Copyright 2023 R.E.D Group</span>
         </div>
         <div class="col-lg-4 text-center">
@@ -270,15 +270,14 @@
           <i class="fab fa-facebook"></i>
           <i class="fab fa-twitter"></i>
         </div>
-        <div class="col-lg-4 text-end">
+        <div class="col-lg-4 orientation-text-right">
           <span>Privacy Policy</span>
         </div>
       </div>
     </footer>
+
     <script src="assets/js/jquery-360.min.js"></script>
-    <script src="assets/bootstrap-5/js/bootstrap.min.js"></script>
     <script src="assets/bootstrap-5/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/bootstrap-5/js/bootstrap.bundle.js"></script>
     <script src="assets/OwlCarousel2/dist/owl.carousel.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
