--- a/career.html
+++ b/career.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Career | Red Group</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/home/favicon.ico" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/bootstrap-5/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/fontawesome-5/css/all.min.css" />
@@ -120,45 +121,47 @@
             <div class="col-lg-6 text-center">
               <h3>Can't find your dream job?</h3>
               <p>Lorem ipsum dolor sit amet consectetur. Ac nec ullamcorper imperdiet</p>
-              <div class="career-form-box">
-                <div class="row">
-                  <div class="col-lg-6 col-sm-12 py-3">
-                    <input type="text" class="form-control" placeholder="Nama Depan" name="first_name" />
+              <form action="#" method="post">
+                <div class="career-form-box">
+                  <div class="row">
+                    <div class="col-lg-6 col-sm-12 py-3">
+                      <input type="text" class="form-control" placeholder="Nama Depan" name="first_name" autocomplete="off" />
+                    </div>
+                    <div class="col-lg-6 col-sm-12 py-3">
+                      <input type="text" class="form-control" placeholder="Nama Belakang" name="last_name" autocomplete="off" />
+                    </div>
                   </div>
-                  <div class="col-lg-6 col-sm-12 py-3">
-                    <input type="text" class="form-control" placeholder="Nama Belakang" name="last_name" />
+                  <div class="row">
+                    <div class="col-12 py-3">
+                      <input type="text" class="form-control" placeholder="No Telepon" name="phone" autocomplete="off" />
+                    </div>
+                    <div class="col-12 py-3">
+                      <input type="email" class="form-control" placeholder="Email" name="email" autocomplete="off" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-6 col-sm-12 py-3 text-start">
+                      <label for="formFile" class="form-label">Upload CV</label>
+                      <input class="form-control" type="file" id="formFile" name="cv_file" />
+                    </div>
+                    <div class="col-lg-6 col-sm-12 py-3 text-start">
+                      <label for="formFile" class="form-label">Upload Motivasi</label>
+                      <input class="form-control" type="file" id="formFile" name="motivation_file" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 py-3">
+                      <input type="text" class="form-control" placeholder="Portfolio" name="portfolio" />
+                    </div>
+                  </div>
+                  <div class="mb-3 py-3">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Posisi pekerjaan yang diinginkan"></textarea>
+                  </div>
+                  <div class="d-block py-3 text-center">
+                    <input type="submit" value="Start Yours" class="submit-career-btn" />
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-12 py-3">
-                    <input type="text" class="form-control" placeholder="No Telepon" name="phone" />
-                  </div>
-                  <div class="col-12 py-3">
-                    <input type="email" class="form-control" placeholder="Email" name="email" />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-6 col-sm-12 py-3 text-start">
-                    <label for="formFile" class="form-label">Upload CV</label>
-                    <input class="form-control" type="file" id="formFile" name="cv_file" />
-                  </div>
-                  <div class="col-lg-6 col-sm-12 py-3 text-start">
-                    <label for="formFile" class="form-label">Upload Motivasi</label>
-                    <input class="form-control" type="file" id="formFile" name="motivation_file" />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12 py-3">
-                    <input type="text" class="form-control" placeholder="Portfolio" name="portfolio" />
-                  </div>
-                </div>
-                <div class="mb-3 py-3">
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Posisi pekerjaan yang diinginkan"></textarea>
-                </div>
-                <div class="d-block py-3 text-center">
-                  <input type="submit" value="Start Yours" class="submit-career-btn" />
-                </div>
-              </div>
+              </form>
             </div>
           </div>
         </div>
