--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Red Group</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/home/favicon.ico">
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/bootstrap-5/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/fontawesome-5/css/all.min.css">
@@ -295,13 +296,13 @@
         <div class="container">
           <div class="cta-box">
             <h2>Subscribe to Our Newsletter</h2>
-            <form action="" method="post">
+            <form action="#" method="post" autocomplete="off">
               <div class="row w-cta mx-auto">
                 <div class="col-lg-5 col-sm-12">
-                  <input type="text" name="full_name" id="" placeholder="Your Name" class="form-control" />
+                  <input type="text" name="full_name" id="" placeholder="Your Name" class="form-control" autocomplete="off" />
                 </div>
                 <div class="col-lg-7 col-sm-12">
-                  <input type="email" name="email" id="" placeholder="Your Email" class="form-control" />
+                  <input type="email" name="email" id="" placeholder="Your Email" class="form-control" autocomplete="off" />
                 </div>
               </div>
               <div class="d-block py-4">
